<resources>
    <string name="app_name">暇つぶし検索 - WaStage</string>

    <string name="title_settings">設定</string>
    <string name="title_search">検索</string>
    <string name="title_settings_color">色設定</string>
    <string name="copyright">(c) toastkidjp</string>
    <string name="close">閉じる</string>

    <string name="title_licenses">ライセンス情報</string>

    <string name="search_action_title">検索</string>

    <string name="search_category_web">Web</string>
    <string name="search_category_image">画像</string>
    <string name="search_category_map">地図</string>
    <string name="search_category_apps">アプリ</string>
    <string name="search_category_twitter">Twitter</string>
    <string name="search_category_youtube">動画</string>
    <string name="search_category_wikipedia">Wikipedia</string>
    <string name="search_category_shopping">ショッピング</string>
    <string name="search_category_technical_qa">ソフトウェア技術Ｑ＆Ａ</string>
    <string name="search_category_technology">TechCrunch</string>
    <string name="search_category_github">GitHub</string>
    <string name="search_category_mvnrepository">MvnRepository</string>

    <string name="settings_color_background_title">背景</string>
    <string name="settings_color_font_title">文字</string>
    <string name="settings_color_preview_title">プレビュー</string>
    <string name="title_clear">設定を初期化</string>
    <string name="cancel">キャンセル</string>
    <string name="ok">OK</string>
    <string name="confirm_clear_all_settings">すべての設定を削除しますか？<![CDATA[<font color="red">この操作は取り消せません。</font>]]></string>
    <string name="done_clear">削除しました。</string>
    <string name="title_enable_suggest">検索入力補助を使う</string>
    <string name="settings_color_prev">元に戻す</string>
    <string name="settings_color_commit">決定</string>
    <string name="settings_color_done_commit">色を変更しました。</string>
    <string name="settings_color_done_reset">色を元に戻しました。</string>
    <string name="settings_color_delete">削除しました。</string>
    <string name="title_app_version">アプリのバージョン</string>

    <string name="production_app_admob_id">ca-app-pub-5751262573448755~7910058629</string>
    <string name="production_banner_unit_id">ca-app-pub-5751262573448755/9386791820</string>
    <string name="title_advertisement_1">広</string>
    <string name="title_advertisement_2">告</string>
    <string name="settings_color_saved_title">保存した色</string>
    <string name="settings_color_saved_text">長押しすると削除できます。</string>
    <string name="title_clear_saved_color">すべて削除</string>
    <string name="favorite_clear_all_title">すべて削除</string>
    <string name="title_favorite_search">お気に入り検索</string>
    <string name="favorite_add_title">追加</string>
    <string name="favorite_search_addition_dialog_empty_message">キーワードを入力してください。</string>
    <string name="favorite_search_addition_successful_format">{0} をお気に入りに追加しました。</string>
    <string name="favorite_search_error_input_message">キーワードを入力してください。</string>
    <string name="search_category_instagram">Instagram</string>
    <string name="title_privacy_policy">プライバシーポリシー</string>
    <string name="link_privacy_policy">https://tmblr.co/ZDG7Be2NVdctY</string>

</resources>
