<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings.SettingsActivity"
    >
    <item
        android:id="@+id/search_toolbar_menu_setting"
        android:title="@string/title_settings"
        android:orderInCategory="90"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/search_toolbar_menu_color"
        android:title="@string/title_settings_color"
        android:icon="@drawable/ic_palette"
        android:orderInCategory="91"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/search_toolbar_menu_favorite"
        android:title="@string/title_favorite_search"
        android:icon="@drawable/ic_star"
        android:orderInCategory="92"
        app:showAsAction="never"
        />
</menu>