<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_color_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:minHeight="?android:actionBarSize"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_color_background_title"
                android:textSize="16sp"
                />
            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/background_palette"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.larswerkman.holocolorpicker.SVBar
                android:id="@+id/background_svbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                />

            <com.larswerkman.holocolorpicker.OpacityBar
                android:id="@+id/background_opacitybar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_color_font_title"
                android:textSize="16sp"
                />
            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/font_palette"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <com.larswerkman.holocolorpicker.SVBar
                android:id="@+id/font_svbar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                />

            <com.larswerkman.holocolorpicker.OpacityBar
                android:id="@+id/font_opacitybar"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
        <Button
            android:id="@+id/settings_color_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/settings_color_commit"
            android:textSize="16sp"
            style="?android:attr/buttonBarStyle"
            />

        <Button
            android:id="@+id/settings_color_prev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/settings_color_prev"
            android:textSize="16sp"
            style="?android:attr/buttonBarStyle"
            />
    </LinearLayout>

</LinearLayout>